# lab4_2ndsem

./: .gitmodules  CMakeLists.txt  README.md
headers/: bin_tree.hpp  print_tree.hpp
templates/: bin_tree.tpp  print_tree.tpp
tests/: main_benchmarks.cpp  main_tests.cpp  sort_insert_remove.xlsx  test_bin_tree.cpp  test_time_big.cpp  test_time_large.cpp
types_headers/: complex.hpp  professor.hpp  student.hpp
types_sources/: complex.cpp  professor.cpp  student.cpp
ui_headers/: io_functions.hpp  ui.hpp
ui_sources/: io_functions.cpp  lab.cpp  ui.cpp
